apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - port: 8123
      targetPort: 8123
      name: http
